# voice-input-system

./: .env.example  pyproject.toml  requirements.txt  test_paste.py
docs/: README.md  api_design.md  architecture.md  implementation_plan.md  requirements.md  security.md
docs/superpowers/plans/: 2026-03-31-refinement-speed-optimization.md  2026-03-31-voice-overlay-gui.md
docs/superpowers/specs/: 2026-03-31-refinement-speed-optimization-design.md  2026-03-31-voice-overlay-gui-design.md
src/: audio.py  audio_level.py  config.py  gui.py  hotkey.py  main.py  output.py  recognizer.py  refiner.py  ui.py
tests/: test_audio_level.py  test_gui.py
